# apu-web

./: .aider.chat.history.md  .env  .env.example  .gitignore  .ignore  AGENTS.md  HOSTINGER_DEPLOY.md  README.md  astro.config.mjs  astro.config.static.mjs  data-dosen.csv  design-language-apu.md  docker-compose.yml  drizzle.config.ts  mise.toml  package-lock.json  package.json  preview.err  program-faculty.csv  tailwind.config.mjs  test.html  tmp_bio.js  tmp_game_snippets.txt  tmp_gc.js  welcome-section.html
.astro/: settings.json
.claude/: settings.json
.hive/: issues.jsonl
.omo/: README.md  debug-diaspora.spec.js  debug-script.mjs  package.json  page2.html  playwright.config.js
apu-web-plan/: apu-about-implementation-plan.md  apu-page-section-breakdown.md  apu-website-content-plan.md  ikmb-factual-information.md  nus-website-analysis.md
docs/: roadmap.md  (+1 more)
mcp-server/: Procfile  README.md  pyproject.toml
mcp-server/scripts/: create_archived_collection.py  create_collection.py  delete_collection.py
mcp-server/src/mcp_server/: __init__.py  main.py
mcp-server/src/mcp_server/domain/: __init__.py  models.py  repositories.py
mcp-server/src/mcp_server/infrastructure/: __init__.py  archive_repository.py  vector_search.py
mcp-server/src/mcp_server/tools/: __init__.py  delete_knowledge.py  promote_knowledge.py  save_knowledge.py  search_knowledge.py
mcp-server/tests/: __init__.py  test_archive_repository.py  test_delete_knowledge.py  test_models.py  test_promote_knowledge.py  test_save_knowledge.py  test_search_knowledge.py  test_vector_search_repository.py
(+381 files in other folders)
